[tool.poetry]
name = "dj_limiter"
version = "0.1.0"
description = "A simple rate limiting middleware for Django."
authors = ["Atabak Hooshangi <atabak.hooshangi.1990@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/atabakhooshangi/dj-limiter"
repository = "https://github.com/atabakhooshangi/dj-limiter"
keywords = ["django", "middleware", "rate limiting"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Django = ">=3.0,<5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-django = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
